--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(ex33)
 
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_FLAGS -pthread)
-add_executable(ex33 main.cpp CommandInterface.h commandPattern.cpp commandPattern.h Singleton.cpp Singleton.h)
+add_executable(ex33 main.cpp CommandInterface.h commandPattern.cpp commandPattern.h Singleton.cpp Singleton.h Expression.h Calculate.cpp Calculate.h ObjectData.cpp ObjectData.h)
